Overflow fix + Remove redundancy

--- a/css/style.css
+++ b/css/style.css
@@ -13,16 +13,19 @@
   cursor: default;
 }
 
-* {
+html {
   font-size: 16px;
+  box-sizing: border-box;
+  min-width: 300px;
+  position: fixed;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
 }
 
 body {
   font-family: 'Roboto Mono', monospace;
   color: #ffffff;
-  overflow-x: hidden;
-  min-width: 300px;
-  height: 100vh;
   transition: background .3s ease;
 }
 
@@ -79,7 +82,7 @@ body {
 }
 
 .wrapper {
-
+  overflow-x: hidden;
 }
 
 .loader_container {
